# mock-dss

./: README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_sign.py  schemas.py
backend/app/core/: config.py
backend/app/models/: document.py
backend/app/services/: database.py  rabbitmq.py  redis.py
backend/tests/: test_api_router_integration.py  test_routes_cache.py  test_routes_rabbitmq.py  test_routes_sign.py
frontend/: package-lock.json  package.json
scripts/bash/: run.sh
scripts/sql/: create_db_and_tables.sql
