[project]
name = "digital-signature-service"
version = "0.1.0"
description = "Toy digital signature service imitation built with FastAPI"
requires-python = ">=3.12"

dependencies = [
    "black>=25.11.0",
    "fastapi>=0.121.1",
    "httpx>=0.28.1",
    "pika>=1.3.2",
    "psycopg[binary,pool]>=3.2.13",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "redis>=7.0.1",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
